Reduccion de los issues